<resources>

    <!-- Application strings -->
    <string name="beacon_scanner">Beacon Scanner</string>
    <string name="beacon_transmitter">Beacon Transmitter</string>
    <string name="logo">Beacon logo</string>

    <!-- List item strings -->
    <string name="list_item_distance">Distance: %1$sm</string>
    <string name="list_item_major_minor">Maj, Min: %1$s.%2$s</string>

    <!-- Menu item strings -->
    <string name="stop_scanning">Stop scanning</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>

    <!-- Bluetooth -->
    <string name="bluetooth_not_enabled">Bluetooth not enabled</string>
    <string name="please_enable_bluetooth">Please enable bluetooth in settings and restart the app
        to work properly.
    </string>

    <!--Detail page strings-->
    <string name="beacon_detail">Beacon details</string>
    <string name="detail_uuid">UUID</string>
    <string name="detail_minor">Major / Minor</string>
    <string name="detail_major">Major</string>
    <string name="detail_distance">Distance</string>
    <string name="detail_bluetooth_address">Bluetooth address</string>
    <string name="detail_manufacturer">Manufacturer</string>
    <string name="detail_rssi">Rssi</string>
    <string name="detail_service_uuid">Service UUID</string>
    <string name="detail_tx_power">TX power</string>
    <string name="distance">%1$sm</string>

    <!-- Content descriptions -->
    <string name="circle_button_content_desc">Circle button</string>
    <string name="ring_pulse_desc">Pulse</string>
    <string name="stop_button_content_desc">Stop button</string>
    <string name="scan_switch_label">Scanning</string>
    <string name="transmit_switch_label">Transmit</string>
    <string name="stop_circle_desc">Stop circle</string>
    <string name="title_activity_tabbed_detail">TabbedDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action">Action</string>
    <string name="detail_type_beacon">EddyStone</string>

    <string name="tab_details_title">Details</string>
    <string name="rssi_legend_label">"RSSI(Received Signal Strength Indicator)"</string>
    <string name="tab_log_title">Log</string>
    <string name="distance_text">Distance: %1$sm</string>
    <string name="chart_description" />
    <string name="title_activity_settings1">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="pref_notification">preference_notification</string>
    <string name="pref_tracking_age">preference_tracking_age</string>
    <string name="pref_scan_frequency">preference_scan_frequency</string>
    <string name="pref_between_scan_period">preference_between_scan_period</string>
    <string name="pref_uuid">preference_uuid</string>
    <string name="pref_major">preference_major</string>
    <string name="pref_minor">preference_minor</string>
    <string name="pref_tx_power">preference_tx_power</string>
    <string name="pref_save_location">preference_log_save_location</string>
    <string name="pref_max_lines">preference_log_max_lines</string>
    <string name="pref_show_log">preference_show_log</string>
    <string name="pref_background_scanning">preference_background_scanning</string>


</resources>
