<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_view_margin">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="394dp"
        android:layout_height="259dp">

        <TextView
            android:id="@+id/detail_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_eddystone"
            android:gravity="center_vertical"
            android:text="@string/detail_type_beacon"
            android:textAppearance="@style/AppTheme.TextAppearance.Title"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/detail_uuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detail_uuid"
            android:textAppearance="@style/AppTheme.TextAppearance.Title"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="64dp" />

        <TextView
            android:id="@+id/detail_field_uuid"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textAppearance="@style/AppTheme.TextAppearance"
            app:layout_constraintLeft_toLeftOf="@+id/detail_manufacturer"
            app:layout_constraintRight_toRightOf="@+id/detail_manufacturer"
            app:layout_constraintBottom_toTopOf="@+id/detail_manufacturer"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/detail_blt_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detail_bluetooth_address"
            android:textAppearance="@style/AppTheme.TextAppearance.Title"
            tools:layout_editor_absoluteY="222dp"
            app:layout_constraintRight_toLeftOf="@+id/detail_field_minor_major" />

        <TextView
            android:id="@+id/detail_field_blt_address"
            android:layout_width="68dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:gravity="end"
            android:textAppearance="@style/AppTheme.TextAppearance"
            tools:layout_editor_absoluteX="273dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_tx"
            android:layout_marginTop="24dp" />

        <TextView
            android:id="@+id/detail_minor_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detail_minor"
            android:textAppearance="@style/AppTheme.TextAppearance.Title"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="90dp"
            tools:text="MinorMajor" />

        <TextView
            android:id="@+id/detail_field_minor_major"
            android:layout_width="142dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="end"
            android:textAppearance="@style/AppTheme.TextAppearance"
            app:layout_constraintLeft_toLeftOf="@+id/detail_field_uuid"
            app:layout_constraintTop_toBottomOf="@+id/detail_manufacturer"
            android:layout_marginTop="48dp"
            app:layout_constraintRight_toLeftOf="@+id/detail_field_uuid" />

        <TextView
            android:id="@+id/detail_tx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detail_tx_power"
            android:textAppearance="@style/AppTheme.TextAppearance.Title"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="187dp" />

        <TextView
            android:id="@+id/detail_field_tx"
            android:layout_width="99dp"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:gravity="end"
            android:textAppearance="@style/AppTheme.TextAppearance"
            app:layout_constraintTop_toTopOf="@+id/detail_type"
            app:layout_constraintRight_toRightOf="@+id/detail_field_manufacturer"
            app:layout_constraintBottom_toBottomOf="@+id/detail_type" />

        <TextView
            android:id="@+id/detail_manufacturer"
            android:layout_width="156dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:text="@string/detail_manufacturer"
            android:textAppearance="@style/AppTheme.TextAppearance.Title"
            tools:layout_editor_absoluteX="199dp"
            app:layout_constraintBottom_toTopOf="@+id/detail_blt_address"
            android:layout_marginBottom="48dp" />

        <TextView
            android:id="@+id/detail_field_manufacturer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textAppearance="@style/AppTheme.TextAppearance"
            tools:layout_editor_absoluteX="341dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/detail_field_uuid" />


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>