<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    android:id="@+id/sliding_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoAnchorPoint="0.88"
    sothree:umanoFadeColor="@android:color/transparent"
    sothree:umanoOverlay="false"
    sothree:umanoPanelHeight="0dp"
    sothree:umanoShadowHeight="8dp">

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <ImageView
            android:id="@+id/scan_circle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/circle_button_content_desc"
            android:src="@drawable/ic_button_circle"/>

        <ImageView
            android:id="@+id/pulse_ring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/ring_pulse_desc"
            android:src="@drawable/pulse_ring"/>

        <ImageButton
            android:id="@+id/start_scan_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_button_circle"
            android:contentDescription="@string/circle_button_content_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_bluetooth_scan"/>

        <ImageButton
            android:id="@+id/stop_scan_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/colorWhite"
            android:contentDescription="@string/stop_button_content_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_stop"
            android:visibility="invisible"/>

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_transparent"/>

        <ImageView
            android:id="@+id/tutorial_arrow"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/arrow_tutorial"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginRight="80dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tutorial_text"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="165dp"
            android:layout_marginRight="95dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/tutorial_text"
            android:textAllCaps="true"
            android:visibility="gone"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:paddingBottom="82dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/beacon_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>